change remote image to local image

--- a/UI/sign-in/src/CSS/forms.css
+++ b/UI/sign-in/src/CSS/forms.css
@@ -1,5 +1,5 @@
 .forms {
-    background: url(http://www.kinyu-z.net/data/wallpapers/35/823942.jpg) center fixed;
+    background: url('../IMG/BG.jpg') center ;
     background-size: cover;
     border-radius: 5px;
     width: 400px;
